# cpp-hello-docker

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
